--- a/website/float.html
+++ b/website/float.html
@@ -1,8 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
+<link href="css/float.css" rel="stylesheet" />
 <head>
-<title>My Homework 3</title>
-<link href="css/reset.css" rel="stylesheet" />
+<title>My Homework 3- Float</title>
+
+
 </head>
 <body>
 <header>&lt;Header&gt;</header>
@@ -13,14 +16,16 @@
     <li><a href="absolute.html">Absolute Layout</a></li>
     <li><a href="relative.html">Relative Layout</a></li>
     <li><a href="float.html">Float Layout</a></li>
-   
+  
   </ul>
 </nav>
+<div class="article-aside">
 <article> &lt;My Article&gt;
   <section>&lt;Section One&gt;</section>
   <section>&lt;Section Two&gt;</section>
 </article>
 <aside>&lt;Aside&gt;</aside>
+	</div>
 <footer>&lt;Footer&gt;</footer>
 </body>
 </html>
