--- a/website/static.html
+++ b/website/static.html
@@ -1,8 +1,10 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>My Homework 3</title>
+<title>My Homework 3 - Static</title>
 <link href="css/reset.css" rel="stylesheet" />
+<link href="css/static.css" rel="stylesheet" />
+
 </head>
 <body>
 <header>&lt;Header&gt;</header>
